# dev30k

./: .gitignore  README.md  tx_hash.txt
.github/workflows/: codeql.yml
aula1/: roteiro.md
aula2/: roteiro.md
playground/: create_wallets.py  get.py  up_node.sh  utils.py  validar_wallet.py
playground/challenger1/: package-lock.json  package.json  wallet.js  wallet.py
playground/challenger3/: payment_winners.py  tx_hash.txt  validate_winners.py  winners.txt
playground/challenger4/: dev30k-03-2.csv  dev30k-03.csv  log-audit.txt  payment_winners.py  submission_analytics.ipynb
playground/challenger4/math/: .gitignore  .pylintrc  README.md
playground/challenger4/math/contracts/math/: Cargo.toml
playground/challenger4/math/script/deploy/: create_smartcontract.py  install_wasm.py
playground/challenger4/math/script/validade/: hello_world.py
playground/challenger5/: dev30k-04.csv  payment_winners.py  script.py  submission_analytics.ipynb
playground/challenger5/tokens/: .gitignore  README.md
playground/challenger5/tokens/.soroban/identity/: alice.toml  bob.toml
playground/challenger5/tokens/contracts/token/: Cargo.toml
playground/challenger5/tokens/contracts/token/src/: contract.rs  error.rs  lib.rs  metadata.rs  test.rs
playground/challenger5/tokens/contracts/token/test_snapshots/test/: initialize_already_initialized.1.json  test.1.json  test_burn.1.json  transfer_from_insufficient_allowance.1.json  transfer_insufficient_balance.1.json
playground/challenger5/tokens/script/: deploy.sh  up_node.sh
(+15 files in other folders)
